2004-08-27  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_vector): More specific test for libgd support of
	antialiasing.  Versions 2.0.0 -> 2.0.11 were not correctly handled by
	the previous test.

2004-08-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot.c (main): Call term->options() on entry if the default
	terminal type is png, jpeg, or tgif.  Without this, setting GNUTERM
	to this driver type causes a segfault due to incomplete initialization
	of the driver data structures.  I believe this call to term->options()
	would be OK for all other drivers as well, but to be on the safe side
	I added it only for the drivers I know will segfault without it.

	* term/gd.trm: New option to generate truecolor png images.
	    set term png .. {{no}truecolor} ..

	* term/gd.trm (PNG_vector): Use anti-aliasing for vectors if possible.
	This does not affect palette-based PNG images, so far as I can tell,
	but does work for both JPEG and TrueColor PNG images.

2004-08-25  Per Persson <persquare@mac.com>

	* term/aquaterm.trm (AQUA_options): make options order-independent;
	replace isstring+quote_str with try_to_get_string();
	allow "font" as a synomym for "fname".
	
2004-08-23  Ethan Merritt  <merritt@u.washington.edu>

	* term/xlib.trm (Xlib_text): Leave output file open so that it is
	possible to plot multiple frames without another 'set term xlib'.

	* svg.trm (SVG_options): allow "font" as a synonym for "fname";
	replace isstring+quote_str with try_to_get_string();
	new option "linewidth <n>".

	* pdf.trm (PDF_options): make options order-independent;
	replace isstring+quote_str with try_to_get_string();
	allow "font" as a synomym for "fname";
	new option "linewidth <n>".

	* post.trm (PS_options): allow "font" as a synonym for "fname"

	* fig.trm (FIG_options): allow "linewidth" as a synonym for "thickness".

2004-08-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix misprints in gnuplot manual (#14).
